--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,14 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps:
+- gi-gdk-3.0.16
+- gi-gtk-3.0.23
+- gi-gtk-hs-0.3.6.1
+- gi-gdkpixbuf-2.0.16
+- gi-gio-2.0.18
+- gi-pango-1.0.16
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
