--- a/stack.yaml
+++ b/stack.yaml
@@ -15,8 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.11
-
+resolver: lts-9.18
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
@@ -46,7 +45,10 @@ extra-deps:
 - gi-gdkpixbuf-2.0.16
 - gi-gio-2.0.18
 - gi-pango-1.0.16
-
+- cairo-0.13.4.2
+- haskell-gi-0.21.2
+- haskell-gi-base-0.21.1
+#- gi-gtk-hs-0.3.6.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
